--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,12 @@
       rel="stylesheet"
     />
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <style>
+      body {
+        background-color: rgba(232, 232, 232, 0.587);
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
